--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="group">
                     <p class="not-account">Não é david.magalhaess</p>
                     <p class="not-account">
-                        <span class="link-blue">Alternar contas</span>
+                        <span class="link-blue">Alterar conta</span>
                         ou 
                         <span class="link-blue">Inscreva-se</span>
                     </p>
